# repokit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFACTOR_PLAN.md  bootstrap.ps1  bootstrap.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/adr/: 1-driver-to-equipment.md  2-workflow-integrity.md  3-permissions-and-scope.md
docs/notes/: roadmap.md
docs/spec/: allowlist-collapse.md  demolition-sequence.md  generation.md  init-mission-shift.md  review-gates.md  workflow.md
docs/spike/: SPIKE-1.md
repo_tools/: _bootstrap.py  build.py  clean.py  cli.py  command_runner.py  config.defaults.yaml  context.py  core.py  features.py  format.py  gitignore.py  init.py  package.py  python.py  test.py
repo_tools/agent/: __init__.py  allowlist_default.toml  approver.py  coderabbit.py  dispatch.py  events.py  events_mcp.py  generate.py  generate_cmd.py  lint.py  mcp_server.py  render.py  repo_cmd.py  rules.py  rules_default.toml  runner.py  team.py  ticket_mcp.py  tickets.py  tool.py  tui.py  wezterm.py  worktree.py
repo_tools/agent/claude/: __init__.py  _base.py  _cli.py  _hooks.py  _sdk.py  _shared.py  claude_sys.txt
repo_tools/agent/hooks/: __init__.py  (+8 more)
test_driver/: .gitignore  CLAUDE.md  config.yaml  dummy_output.txt  pyproject.toml  repo
test_driver/tests/: conftest.py  test_bootstrap.py  test_cli_coverage.py  test_cli_integration.py  test_command_runner.py  test_config.py  test_core_coverage.py  test_features.py  test_gitignore.py  test_init.py  test_ticket_tool.py  test_tokens.py
test_driver/tools/: framework
(+55 files in other folders)
