[project]
name = "repokit"
version = "0.7.3"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "colorama>=0.4",
    "bashlex>=0.18",
]

[dependency-groups]
cpp = ["clang-format>=19.0", "clang-tidy>=19.0"]
python = ["ruff>=0.4"]
sdk = ["claude-agent-sdk>=0.1.0", "rich>=13.0", "textual>=1.0"]

[tool.uv]
package = false
